frontend/tests/cases/positive/extnat.gr
tst : Int [1 : Ext Nat] → Int
tst [x] = x
