frontend/tests/cases/negative/polymorphism/unknownTyVar.gr
id : Int → a
id x = x